--- a/src/test/resources/config/application.properties
+++ b/src/test/resources/config/application.properties
@@ -9,3 +9,7 @@ spring.main.banner-mode=off
 # Logging configuration
 logging.level.com.mycompany.myapp=OFF
 logging.config=classpath:logback.xml
+
+application.exception.package=org.,java.,net.,javax.,com.,io.,de.,tech.jhipster.lite,com.mycompany.myapp
+server.port=0
+spring.main.allow-bean-definition-overriding=true
