--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -8,7 +8,7 @@ spring.application.name=jhipsterSampleApplication
 logging.level.com.mycompany.myapp=INFO
 
 application.exception.package=org.,java.,net.,javax.,com.,io.,de.,tech.jhipster.lite,com.mycompany.myapp
-jhlite-hidden-resources.tags=banner
+jhlite-hidden-resources.tags=
 server.port=8080
 spring.jackson.default-property-inclusion=non_null
-jhlite-hidden-resources.slugs=custom-jhlite
+jhlite-hidden-resources.slugs=custom-jhlite,neo4j,neo4j-migrations
